<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical"
    android:paddingLeft="45dp"
    android:paddingRight="45dp"
    android:paddingTop="90dp" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/login_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/login_editgroup_bg"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_UserId"
            style="@style/et_style"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@null"
            android:inputType="phone"
            android:hint="@string/et_userid_hint_txt"
            android:textColorHint="#a9cade" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:orientation="vertical" />

        <EditText
            android:id="@+id/et_LoginPassword"
            style="@style/et_style"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textColorHint="#a9cade" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/checkBox_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/login_check_bg"
            android:checked="false" />

        <TextView
            style="@style/tv_style"
            android:layout_marginLeft="5dp"
            android:text="@string/tv_checkbox_txt"
            android:textColor="@color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        style="@style/btn_style"
        android:layout_marginTop="60dp"
        android:background="@drawable/selector_btn_white"
        android:textColor="#517cde"
        android:text="@string/Login" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_protol"
            />

        <TextView
            style="@style/tv_style"
            android:layout_marginLeft="5dp"
            android:text="@string/tv_protocol_txt0"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/tv_protocolYs"
            style="@style/tv_style"
            android:text="@string/tv_protocol_txt1"
            android:textColor="@color/white" />
        <TextView
            style="@style/tv_style"
            android:text="@string/tv_protocol_txt2"
            android:textColor="@color/white" />
         <TextView
            android:id="@+id/tv_protocolFw"
            style="@style/tv_style"
            android:text="@string/tv_protocol_txt3"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_password_forget"
            />

        <TextView
            android:id="@+id/tv_LoginPasswordForget"
            style="@style/tv_style"
            android:layout_marginLeft="5dp"
            android:text="@string/tv_passwordfoget_txt"
            android:textColor="@color/white" />
       
    </LinearLayout>
</LinearLayout>